syntax = "proto3";

package time;

option go_package = "./;time";

service TimeService {
  rpc GetCurrentTime (Empty) returns (TimeResponse);
}

message Empty {}

message TimeResponse {
  string current_time = 1;
}
